frontend/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshcloud-ui
  labels:
    app.kubernetes.io/part-of: freshcloud
