frontend/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshcloud-ui
  namespace: freshcloud-ui
  labels:
    app.kubernetes.io/name: freshcloud-ui
spec:
  selector:
    app.kubernetes.io/name: freshcloud-ui
  ports:
    - name: http
      port: 80
      targetPort: http
